@@ -1,0 +1,42 @@
+name: macos
+on:
+  push:
+    branches:
+      - '*'
+    tags-ignore:
+      - '*'
+  pull_request:
+jobs:
+  perl:
+    runs-on: macOS-latest
+    strategy:
+      matrix:
+        perl-version:
+          - '5.32'
+          # - '5.30'
+          # - '5.28'
+          # - '5.26'
+          # - '5.24'
+          # - '5.22'
+          # - '5.20'
+          # - '5.18'
+          # - '5.16'
+          # - '5.14'
+          # - '5.12'
+          - '5.10'
+    steps:
+      - uses: actions/checkout@v2
+      - name: Setup perl
+        uses: shogo82148/actions-setup-perl@v1
+        with:
+          perl-version: ${{ matrix.perl-version }}
+      - name: perl -V
+        run: perl -V
+      - name: Install Dependencies
+        run: cpanm -n --installdeps .
+      - run: id
+      - name: Run Tests
+        run: |
+          perl Makefile.PL
+          make
+          make test
